# Kerberus

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.it.md  README.md  RELEASE.md  To-DO.txt  build_release.py  build_source_release.py  bump_version.py  install-linux.sh  installer.py  kerberus_app.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  start.ps1  start.sh
.github/workflows/: build.yml
docs/adr/: 0001-native-sam-and-update-channel.md  0002-sam-v3-compatibility.md  0003-private-voice-messages.md
kerberus/: __init__.py  config.py  crypto.py  instance.py  link_preview.py  main.py  network.py  network_insights.py  ratchet.py  router.py  sam.py  service.py  ui.py  updates.py  vault.py  voice.py
native/: go.mod  main.go  main_test.go  voice.go  voice_test.go
tests/: __init__.py  test_bump_version.py  test_crypto.py  test_installer.py  test_link_preview.py  test_live_i2p.py  test_network_insights.py  test_ratchet.py  test_release_build.py  test_router.py  test_sam.py  test_service.py  test_ui.py  test_updates.py  test_vault.py  test_voice.py
