[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "kerberus-i2p"
dynamic = ["version"]
description = "Private hybrid post-quantum messenger over I2P SAM"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=48.0.1,<49",
  "PyNaCl>=1.6,<2",
  "pqcrypto>=0.4,<0.5",
  "PyQt6>=6.8,<7",
  "emoji>=2.15,<3",
  "psutil>=7.0,<8",
]

[project.scripts]
kerberus = "kerberus.main:main"

[project.optional-dependencies]
build = ["build>=1.2,<2", "pyinstaller>=6.21,<7"]

[tool.setuptools.dynamic]
version = {attr = "kerberus.__version__"}

[tool.setuptools.packages.find]
include = ["kerberus*"]

[tool.setuptools.package-data]
kerberus = ["assets/lucide/*.svg", "assets/lucide/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
